Import of TEEJAY/XML-DOM-BagOfTricks-0.02 from CPAN.
gitpan-cpan-distribution: XML-DOM-BagOfTricks
gitpan-cpan-version:      0.02
gitpan-cpan-path:         TEEJAY/XML-DOM-BagOfTricks-0.02.tar.gz
gitpan-cpan-author:       TEEJAY
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -3,4 +3,7 @@ Revision history for Perl extension XML::DOM::BagOfTricks.
 0.01  Thu Dec  9 18:06:10 2004
 	- original version; created by h2xs 1.23 with options
 		-X XML::DOM::BagOfTricks
-
+        - created original module based on XML::Xerces::BagOfTricks
+0.02  Wed Dec 22 2004
+	- Modified API changing get to create where ambiguous
+	- Added new methods based on XML::DOM::Twig
