Import of TEEJAY/XML-DOM-BagOfTricks-0.05 from CPAN.
gitpan-cpan-distribution: XML-DOM-BagOfTricks
gitpan-cpan-version:      0.05
gitpan-cpan-path:         TEEJAY/XML-DOM-BagOfTricks-0.05.tar.gz
gitpan-cpan-author:       TEEJAY
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -16,3 +16,5 @@ Revision history for Perl extension XML::DOM::BagOfTricks.
 	- fixed errors in documentation
 	- doubled the number of tests
 	- fixed createDocument to attach root element to document element
+0.05 Wed Mar 30 2005
+	- no longer requires XML::Xerces::DOMDocument in getElementwithText
